# src/routes/general/products.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import ProductController from '../../controller/productController';
-import ProductValidator from '../../validators/ProductValidator';
+import ProductValidator, { validateProductSlug } from '../../validators/ProductValidator';
 
 const router = Router();
 
@@ -14,6 +14,8 @@ router.get('/recommendation', ProductController.getRecommendation);
 router.get('/recommendation4u', ProductController.getRecommendation);
 
 router.get('/categoryNSub/:category/:subCat', ProductController.getProductsByCategoryAndSubCategory);
+router.get('/category/:slug', ...ProductValidator.validateCategorySlug, ProductController.getByCategorySlug);
+router.get('/slug/:slug', ...validateProductSlug, ProductController.getProductBySlug);
 router.get('/:id', ...ProductValidator.validateProductId, ProductController.getProductById);
 
 export default router;
